--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.6.6",
+    "vue-instantsearch": "^2.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
